# hat-chatter

./: .buildinfo  .gitignore  CNAME  README.rst  chatter.html  index.html  objects.inv  peru.yaml  pyproject.toml  python.html  requirements.pip.dev.txt  requirements.pip.runtime.txt  requirements.pip.txt  search.html  searchindex.js
.doctrees/: chatter.doctree  environment.pickle  index.doctree  python.doctree
.github/workflows/: docs.yaml
docs/: chatter.rst  conf.py  index.rst  python.rst
py_api/: index.html  search.js
py_api/hat/: chatter.html
schemas_sbs/: hat.sbs
src_c/hat/: chatter.c
src_doit/: __init__.py
src_py/hat/chatter/: __init__.py
test_pytest/: test_chatter.py
