[project]
name = "hat-chatter"
version = "0.5.11"
description = "Hat Chatter protocol"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "hat-aio ~= 0.7.8",
    "hat-json ~= 0.5.19",
    "hat-sbs ~= 0.6.4",
]

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-chatter.git"
Documentation = "http://hat-chatter.hat-open.com"

[project.optional-dependencies]
dev = [
    "hat-doit ~=0.14.5",
    "hat-util ~= 0.6.10",
    "peru >= 1.3.1",
]

[build-system]
requires = ["hat-doit ~=0.14.5"]
build-backend = "hat.doit.pep517"

[tool.pytest.ini_options]
testpaths = ["test_pytest"]
asyncio_mode = "auto"
timeout = 300

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
include = ["src_py/*"]
data_file = "build/.coverage"
